--- a/app/src/main/res/layout/fragment_item_detail.xml
+++ b/app/src/main/res/layout/fragment_item_detail.xml
@@ -13,87 +13,107 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="@dimen/margin"
-    tools:context=".ItemDetailFragment">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <TextView
-        android:id="@+id/item_name"
-        style="@style/Widget.Inventory.TextView"
-        android:layout_width="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Screwdrivers" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="@dimen/margin"
+        tools:context=".ItemDetailFragment">
 
-    <TextView
-        android:id="@+id/item_price"
-        style="@style/Widget.Inventory.TextView"
-        android:layout_width="wrap_content"
-        android:layout_marginTop="@dimen/margin"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/item_name"
-        tools:text="$5.50" />
+        <Button
+            android:id="@+id/sell_item"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin"
+            android:text="@string/sell"
+            android:enabled="@{viewModel.itemDetail.quantityInStock > 0}"
+            android:onClick="@{()->viewModel.sellItem()}"
+            app:layout_constraintBottom_toTopOf="@+id/delete_item"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/item_count" />
 
-    <TextView
-        android:id="@+id/item_count_label"
-        style="@style/Widget.Inventory.TextView"
-        android:layout_width="wrap_content"
-        android:text="@string/quantity"
-        app:layout_constraintBaseline_toBaselineOf="@+id/item_count"
-        app:layout_constraintEnd_toStartOf="@+id/item_count"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent" />
+        <Button
+            android:id="@+id/delete_item"
+            style="?attr/materialButtonOutlinedStyle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin"
+            android:text="@string/delete"
+            android:onClick="@{()->itemFrag.showConfirmationDialog()}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/sell_item" />
 
-    <TextView
-        android:id="@+id/item_count"
-        style="@style/Widget.Inventory.TextView"
-        android:layout_width="0dp"
-        android:layout_marginStart="@dimen/margin_between_elements"
-        android:layout_marginTop="@dimen/margin"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/item_count_label"
-        app:layout_constraintTop_toBottomOf="@+id/item_price"
-        tools:text="5" />
+        <TextView
+            android:id="@+id/item_count_label"
+            style="@style/Widget.Inventory.TextView"
+            android:layout_width="wrap_content"
+            android:text="@string/quantity"
+            app:layout_constraintBaseline_toBaselineOf="@+id/item_count"
+            app:layout_constraintEnd_toStartOf="@+id/item_count"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent" />
 
-    <Button
-        android:id="@+id/sell_item"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin"
-        android:text="@string/sell"
-        app:layout_constraintBottom_toTopOf="@+id/delete_item"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/item_count" />
+        <TextView
+            android:id="@+id/item_count"
+            style="@style/Widget.Inventory.TextView"
+            android:layout_width="0dp"
+            android:layout_marginStart="@dimen/margin_between_elements"
+            android:layout_marginTop="@dimen/margin"
+            android:text="@{String.valueOf(viewModel.itemDetail.quantityInStock)}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/item_count_label"
+            app:layout_constraintTop_toBottomOf="@+id/item_price"
+            tools:text="5" />
 
-    <Button
-        android:id="@+id/delete_item"
-        style="?attr/materialButtonOutlinedStyle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin"
-        android:text="@string/delete"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/sell_item" />
+        <TextView
+            android:id="@+id/item_name"
+            style="@style/Widget.Inventory.TextView"
+            android:layout_width="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:text="@{viewModel.itemDetail.itemName}"
+            tools:text="Screwdrivers" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/edit_item"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/margin_between_elements"
-        android:layout_marginBottom="@dimen/margin_between_elements"
-        android:contentDescription="@string/edit_item"
-        android:src="@drawable/ic_edit"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:tint="@android:color/white" />
+        <TextView
+            android:id="@+id/item_price"
+            style="@style/Widget.Inventory.TextView"
+            android:layout_width="wrap_content"
+            android:layout_marginTop="@dimen/margin"
+            app:item="@{viewModel.itemDetail}"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/item_name"
+            tools:text="$5.50" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/edit_item"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/margin_between_elements"
+            android:layout_marginBottom="@dimen/margin_between_elements"
+            android:contentDescription="@string/edit_item"
+            android:src="@drawable/ic_edit"
+            android:onClick="@{()->itemFrag.callEdit(viewModel.itemDetail.id)}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:tint="@android:color/white" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <data>
+        <variable
+            name="itemFrag"
+            type="com.example.inventory.ItemDetailFragment" />
+        <variable
+            name="viewModel"
+            type="com.example.inventory.viewmodel.InventoryViewModel" />
+    </data>
+</layout>
 
 
